Fix light Scrollbar color not picking up on Firefox

--- a/p/themes/Flat/flat.css
+++ b/p/themes/Flat/flat.css
@@ -506,7 +506,11 @@ a.btn {
 }
 
 /*=== Scrollbar */
-.ss-scroll, #sidebar:hover::-webkit-scrollbar-thumb {
+.ss-scroll {
+	background: rgba(255, 255, 255, 0.3);
+}
+
+#sidebar:hover::-webkit-scrollbar-thumb, .ss-scroll {
 	background: rgba(255, 255, 255, 0.3);
 }
 
