--- a/p/themes/Swage/swage.scss
+++ b/p/themes/Swage/swage.scss
@@ -604,7 +604,11 @@ form {
 	}
 }
 
-.ss-scroll, #sidebar:hover::-webkit-scrollbar-thumb {
+.ss-scroll {
+	background: rgba(255, 255, 255, 0.3);
+}
+
+#sidebar:hover::-webkit-scrollbar-thumb, .ss-scroll {
 	background: rgba(255, 255, 255, 0.3);
 }
 
